--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
-		"dotenv": "^8.2.0",
-		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"body-parser": "^1.19.0",
+    	"cors": "^2.8.5",
+    	"dotenv": "^8.2.0",
+    	"express": "^4.17.1",
+    	"mongoose": "^5.11.15",
+		"mongoose-auto-increment": "^5.0.1"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
