--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-exercise-tracker",
 	"version": "0.1.0",
+	"type": "module",
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "index.js",
 	"scripts": {
@@ -8,11 +9,9 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
-    	"cors": "^2.8.5",
-    	"dotenv": "^8.2.0",
-    	"express": "^4.17.1",
-    	"mongoose": "^5.11.15",
-		"mongoose-auto-increment": "^5.0.1"
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"mongoose": "^5.11.15"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
@@ -21,5 +20,8 @@
 	"keywords": [
 		"node",
 		"express"
-	]
+	],
+	"devDependencies": {
+		"dotenv": "^16.0.3"
+	}
 }
